// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`platform/git/storage getBranchCommit(branchName) should throw if branch does not exist 1`] = `[Error: Cannot fetch commit for branch that does not exist: not_found]`;

exports[`platform/git/storage getCommitMessages() returns commit messages 1`] = `
Array [
  "master message",
  "past message",
]
`;

exports[`platform/git/storage getFile(filePath, branchName) returns null for 404 1`] = `[Error: repository-changed]`;

exports[`platform/git/storage getFileList() should return the correct files 1`] = `
Array [
  "file_to_delete",
  "future_file",
  "master_file",
  "past_file",
]
`;

exports[`platform/git/storage getFileList() should return the correct files 2`] = `
Array [
  "file_to_delete",
  "master_file",
  "past_file",
]
`;

exports[`platform/git/storage initRepo()) should fetch latest 1`] = `
Array [
  "master message",
  "past message",
]
`;

exports[`platform/git/storage initRepo()) should fetch latest 2`] = `
Array [
  "past message2",
  "master message",
]
`;

exports[`platform/git/storage isBranchStale() should throw if branch does not exist 1`] = `[Error: Cannot check staleness for branch that does not exist: not_found]`;

exports[`platform/git/storage setBaseBranch(branchName) should throw if branch does not exist 1`] = `[Error: Cannot set baseBranch to something that does not exist: not_found]`;
